# CustomSolvers

./: .zenodo.json  CMakeLists.txt  flake.nix  justfile
include/: arnoldi.hpp  gmres.hpp  householder_orthogonalization.hpp  iteration_result.hpp  lanczos_la.hpp  lanczos_wla.hpp  precondition.hpp  qmr.hpp  qmr_wla.hpp  qr.hpp  solve_least_squares.hpp
src/: main.cxx  tests.cxx
